--- a/thesis.tex
+++ b/thesis.tex
@@ -237,7 +237,7 @@ Trang này được cố tình để trống.
 \renewcommand\listoflistingscaption{Các Đoạn Mã Nguồn}
 \listoflistings
 %------------------------------------------------------------------------------
-\input{glossaries}
+\input{./glossaries/glossaries}
 \setglossarystyle{altlist}
 \printglossarieshere
 \clearpage
@@ -297,7 +297,7 @@ Trang này được cố tình để trống.
 \label{bibliography}
 \lhead{\emph{Tài Liệu Tham Khảo}}  % Change the left side page header to "Bibliography"
 \bibliographystyle{unsrtnat}  % Use the "unsrtnat" BibTeX style for formatting the Bibliography
-\bibliography{bibliography}  % The references (bibliography) information are
+\bibliography{./bibliography/bibliography}  % The references (bibliography) information are
 %==============================================================================
 \end{document}  % THE END
 %==============================================================================
