No more emph (italic) for the header chapter name.

--- a/thesis.tex
+++ b/thesis.tex
@@ -254,7 +254,7 @@ Trang này được cố tình để trống.
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\chaptername\space \thechapter. \space \emph{\leftmark}}
+\lhead{\chaptername\space \thechapter. \space \leftmark}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 \lfoot{\small GVHD: \instructorname}\rfoot{\small SVTH: \studentname}
 % Include the chapters of the thesis, as separate files
@@ -276,7 +276,7 @@ Trang này được cố tình để trống.
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\appendixname\space \thechapter. \space \emph{\leftmark}}
+\lhead{\appendixname\space \thechapter. \space \leftmark}
 \rhead{\thepage}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 \lfoot{\small GVHD: \instructorname}\rfoot{\small SVTH: \studentname}
