--- a/thesis.tex
+++ b/thesis.tex
@@ -154,7 +154,7 @@ Trang này được cố tình để trống.
 %==============================================================================
 % Declaration Page required for the Thesis, your institution may give you a different text to place here
 \Declaration{
-\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+\addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
 \input{./preamble/foreword}
 }
 \clearpage  % Declaration ended, now start a new page
@@ -174,7 +174,7 @@ Trang này được cố tình để trống.
 
 % The Acknowledgements page, for thanking everyone
 \acknowledgements{
-\addtocontents{toc}{\vspace{1em}}  % Add a gap in the Contents, for aesthetics
+\addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
 \input{./preamble/acknowledgements}
 }
 \clearpage  % End of the Acknowledgements
@@ -192,8 +192,7 @@ Trang này được cố tình để trống.
 \setstretch{1.3}
 
 \reviews{
-\addtocontents{toc}{\vspace{1em}}
-
+    \addtocontents{toc}{}
 }
 
 \null\vfill
@@ -288,7 +287,7 @@ Trang này được cố tình để trống.
 \input{./appendices/appendixB}	% Appendix Title
 % \begin{appendices}
 %\backmatter
-\addtocontents{toc}{\vspace{1em}} % Add a gap in the Contents, for aesthetics
+\addtocontents{toc}{} % Add a gap in the Contents, for aesthetics
 \clearpage
 %==============================================================================
 \pagestyle{fancy}
