Typo on \makeglossaries

--- a/thesis.tex
+++ b/thesis.tex
@@ -39,7 +39,7 @@
 %     \setcounter{chapter}{0}
 %     \renewcommand\thechapter{\appendixname~\Alph\space{chapter}}}
 %%===========================================================================%%
-\makeglossaries
+\makeglossaries{}
 %==============================================================================
 \graphicspath{{figures/}}  % Location of the graphics files
 %%===========================================================================%%
