Format Document with latexindent

--- a/thesis.tex
+++ b/thesis.tex
@@ -109,7 +109,7 @@
 % Set up the Title Page
 \title{\bf\Huge DOCUMENT TITLE}
 \authors{\texorpdfstring{\href{http://example.com}{AUTHOR}}
-            {AUTHOR}}
+    {AUTHOR}}
 %\addresses  {\groupname\\\deptname\\\univname}  % Do not change this here
 \addresses{ADDRESS}
 \date{DATE}
@@ -146,7 +146,7 @@
 \pagestyle{empty}
 \null\vfill
 \begin{center}
-Trang này được cố tình để trống.
+    Trang này được cố tình để trống.
 \end{center}
 \clearpage
 \pagestyle{fancy}
@@ -154,8 +154,8 @@ Trang này được cố tình để trống.
 %==============================================================================
 % Declaration Page required for the Thesis, your institution may give you a different text to place here
 \Declaration{
-\addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
-\input{./preamble/foreword}
+    \addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
+    \input{./preamble/foreword}
 }
 \clearpage  % Declaration ended, now start a new page
 %==============================================================================
@@ -164,7 +164,7 @@ Trang này được cố tình để trống.
 \pagestyle{empty}  % No headers or footers for the following pages
 \null\vfill
 \begin{center}
-Trang này được cố tình để trống.
+    Trang này được cố tình để trống.
 \end{center}
 \clearpage  % Funny Quote page ended, start a new page
 %==============================================================================
@@ -174,8 +174,8 @@ Trang này được cố tình để trống.
 
 % The Acknowledgements page, for thanking everyone
 \acknowledgements{
-\addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
-\input{./preamble/acknowledgements}
+    \addtocontents{toc}{}  % Add a gap in the Contents, for aesthetics
+    \input{./preamble/acknowledgements}
 }
 \clearpage  % End of the Acknowledgements
 %==============================================================================
@@ -184,7 +184,7 @@ Trang này được cố tình để trống.
 \pagestyle{empty}  % No headers or footers for the following pages
 \null\vfill
 \begin{center}
-Trang này được cố tình để trống.
+    Trang này được cố tình để trống.
 \end{center}
 \clearpage  % Funny Quote page ended, start a new page
 %==============================================================================
@@ -198,10 +198,9 @@ Trang này được cố tình để trống.
 \null\vfill
 
 Đã ký:\\
- \rule[1em]{25em}{0.5pt}
+\rule[1em]{25em}{0.5pt}
 
-Ngày:\\
- \rule[1em]{25em}{0.5pt}
+Ngày:\\ \rule[1em]{25em}{0.5pt}
 
 \clearpage
 %==============================================================================
@@ -210,7 +209,7 @@ Ngày:\\
 \pagestyle{empty}
 \null\vfill
 \begin{center}
-Trang này được cố tình để trống.
+    Trang này được cố tình để trống.
 \end{center}
 \clearpage
 %==============================================================================
@@ -298,7 +297,7 @@ Trang này được cố tình để trống.
 \lhead{\emph{Tài Liệu Tham Khảo}}
 % Use the "unsrtnat" BibTeX style for formatting the Bibliography
 \bibliographystyle{unsrtnat}
- % The references (bibliography) information are
+% The references (bibliography) information are
 \bibliography{./bibliography/bibliography}
 %==============================================================================
 \end{document}  % THE END
