--- a/preamble/acknowledgements.tex
+++ b/preamble/acknowledgements.tex
@@ -1,3 +1,9 @@
-\blindtext
+Chúng em xin gửi lời cảm ơn đến thầy Đỗ Minh Tiến đã tận tình hướng dẫn, cung cấp kiến thức chuyên sâu và đưa ra những góp ý quý báu để nhóm chúng em hoàn thiện đề tài một cách chỉnh chu và chuyên nghiệp. Sự hỗ trợ của thầy không chỉ giúp chúng em áp dụng kiến thức lý thuyết vào thực tiễn mà còn truyền cảm hứng để nhóm chúng em khám phá sâu hơn về lĩnh vực hạ tầng Công Nghệ Thông Tin.
 
-\blindtext
+Chúng em xin gửi lời cảm ơn đến Trường Đại học Công nghệ Thông tin -- Đại học Quốc gia TP. Hồ Chí Minh và Trung tâm Phát triển Công nghệ Thông tin đã tạo điều kiện thuận lợi về tài liệu, cơ sở vật chất và môi trường học tập để nhóm chúng em có thể thực hiện nghiên cứu.
+
+Chúng em xin gửi lời cảm ơn chân thành đến Công ty Orient Software Development Coporation đã tạo điều kiện để chúng em có thể tìm hiểu về công ty. Thông qua các tài liệu chính thức, báo cáo thường niên và thông tin công khai trên website đã cung cấp nguồn dữ liệu phong phú và đáng tin cậy. 
+
+Cuối cùng, xin cảm ơn các thành viên đã cùng nhau phối hợp có trách nhiệm để hoàn thiện đồ án đúng tiến độ và đạt chất lượng tốt nhất. Mặc dù đã cố gắng hết sức, nhưng không tránh khỏi những thiếu sót chúng em mong nhận được sự góp ý từ Thầy để nhóm chúng em có thể rút kinh nghiệm và cải thiện trong các dự án sau.
+
+Xin chân thành cảm ơn!
