--- a/thesis.tex
+++ b/thesis.tex
@@ -141,7 +141,8 @@
 % Define the page headers using the FancyHdr package and set up for one-sided printing
 \fancyhead{}  % Clears all page headers and footers
 \rhead{\thepage}  % Sets the right side header to show the page number
-\lhead{}  % Clears the left side page header
+% Hiện tiêu đề Mục Lục trên header
+\lhead{\textbf{\leftmark}}
 
 \pagestyle{fancy}  % Finally, use the "fancy" page style to implement the FancyHdr headers
 
