textsc for chaptername on the headers

--- a/thesis.tex
+++ b/thesis.tex
@@ -258,7 +258,7 @@ Ngày:\\ \rule[1em]{25em}{0.5pt}
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\chaptername\space \thechapter. \space \leftmark}
+\lhead{\textsc{\chaptername} \space \thechapter. \space \textsc{\leftmark}}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 \lfoot{\small GVHD:~\instructorname}\rfoot{\small SVTH:~\studentname}
 % Include the chapters of the thesis, as separate files
@@ -280,7 +280,7 @@ Ngày:\\ \rule[1em]{25em}{0.5pt}
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\appendixname\space \thechapter. \space \leftmark}
+\lhead{\textsc{\chaptername} \space \thechapter. \space \textsc{\leftmark}}
 \rhead{\thepage}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 \lfoot{\small GVHD:~\instructorname}\rfoot{\small SVTH:~\studentname}
