--- a/thesis.tex
+++ b/thesis.tex
@@ -137,7 +137,7 @@
 \fancyhead{}  % Clears all page headers and footers
 \rhead{\thepage}  % Sets the right side header to show the page number
 % Hiện tiêu đề Mục Lục trên header
-\lhead{\textbf{\leftmark}}
+\lhead{\textsc{\leftmark}}
 
 \pagestyle{fancy}  % Finally, use the "fancy" page style to implement the FancyHdr headers
 
@@ -253,7 +253,7 @@ Ngày:\\ \rule[1em]{25em}{0.5pt}
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\chaptername\space \thechapter. \space \leftmark}
+\lhead{\textsc{\chaptername} \space \thechapter. \space \textsc{\leftmark}}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
 \lfoot{\small GVHD:~\instructorname}\rfoot{\small SVTH:~\studentname}
 % Include the chapters of the thesis, as separate files
@@ -275,10 +275,11 @@ Ngày:\\ \rule[1em]{25em}{0.5pt}
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{#1}{}}
 \renewcommand{\sectionmark}[1]{\markright{#1}{}}
-\lhead{\appendixname\space \thechapter. \space \leftmark}
+\lhead{\textsc{\chaptername} \space \thechapter. \space \textsc{\leftmark}}
 \rhead{\thepage}
 \renewcommand{\footrulewidth}{0.4pt} % default is 0pt
-\lfoot{\small GVHD:~\instructorname}\rfoot{\small SVTH:~\studentname}
+\lfoot{\small GVHD:~\instructorname}
+\rfoot{\small SVTH:~\studentname}
 
 %\appsecnums
 \appendix % Cue to tell LaTeX that the following 'chapters' are Appendices
