Separated lines for different packages.

--- a/thesis.tex
+++ b/thesis.tex
@@ -15,11 +15,12 @@
 \usepackage{booktabs}
 \usepackage{tabularx}
 \usepackage{float}
+\usepackage{calc}
+\usepackage{tocloft}
+
 %\usemintedstyle{trac}
 \floatstyle{boxed}
 \restylefloat{figure}
-
-\usepackage{tocloft,calc}
 
 % Display the chapter name (i.e Chương) in TOC
 \renewcommand\cftchappresnum{\chaptername\space}
