--- a/thesis.tex
+++ b/thesis.tex
@@ -24,6 +24,7 @@
 
 % Display the chapter name (i.e Chương) in TOC
 \renewcommand\cftchappresnum{\chaptername\space}
+\renewcommand\cftchapaftersnum{.\space}
 \setlength{\cftchapnumwidth}{\widthof{\textbf{Chương~999~}}}
 
 \makeatletter
