Bang Phan Cong Nhiem Vu

--- a/preamble/foreword.tex
+++ b/preamble/foreword.tex
@@ -1,3 +1,27 @@
-\blindtext
-
-\blindtext
+\begin{table}[htbp]
+    \centering
+    \begin{tabular}{p{0.1\textwidth} | p{0.2\textwidth} | p{0.3\textwidth}| p{0.3\textwidth}}
+       \toprule
+        \textbf{MSSV} & \textbf{Họ Tên} & \textbf{Nhiệm Vụ} & \textbf{Chương Mục} \\
+        \midrule
+        \midrule
+        25410171 & Lê Thị Tú Anh & Thiết kế slide Làm bài tập chương  & Chương I, II, III, IV, V \\
+        25410179 & Giang Hải Chương & Làm bài tập chương  Phản biện & Chương III \\
+        25410183 & Nguyễn Đào Anh Đạt & Thuyết trình & Chương V \\
+        25410193 & Nguyễn Minh Duy & Thiết kế slide & Chương I, II, III, IV, V \\
+        25410204 & Trương Xuân Hậu & Phản biện & Chương V \\
+        25410213 & Phan Chí Hiếu & Làm bài tập chương Phản biện & Chương IV \\
+        25410220 & Vũ Huy Hoàng & Làm bài tập chương  Thuyết trình & Chương IV \\
+        25410239 & Phạm Tuấn Kiệt & Làm bài tập chương  Phản biện & Chương V \\
+        25410240 & Nguyễn Tạ Quí Lan & Thiết kế slide  Chỉnh file đồ án Phản biện & Chương I, II, III, IV, V Chương III \\
+        25410244 & Nguyễn Thành Lộc & Làm bài tập chương  Phản biện & Chương V \\
+        25410291 & Đinh Xuân Sâm & Chỉnh file đồ án Thuyết trình & Chương I, II \\
+        25410319 & Đặng Hữu Toàn & Làm bài tập chương  Phản biện & Chương IV \\
+        25410321 & Nguyễn Điền Triết & Làm bài tập chương  Thuyết trình & Chương III \\
+        25410325 & Nguyễn Văn Trung & Tìm thông tin và nội dung công ty Làm file đồ án Phản biện & Chương I, II, III, IV, V Chương I, II \\
+        25410338 & Lê Anh Vũ & Phản biện & Chương V \\
+   \bottomrule
+    \end{tabular}
+    \caption{Nhóm 1 (Alpha) -- Bảng Phân Công}
+    \label{tab:alphagroup}
+\end{table}
