Bang Phan Cong Cong Viec

--- a/preamble/foreword.tex
+++ b/preamble/foreword.tex
@@ -1,25 +1,40 @@
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{p{0.1\textwidth} | p{0.2\textwidth} | p{0.3\textwidth}| p{0.3\textwidth}}
+    \begin{tabular}{p{0.05\textwidth} | p{0.1\textwidth} | p{0.22\textwidth} | p{0.3\textwidth}| p{0.25\textwidth}}
        \toprule
-        \textbf{MSSV} & \textbf{Họ Tên} & \textbf{Nhiệm Vụ} & \textbf{Chương Mục} \\
+        \textbf{STT} & \textbf{MSSV} & \textbf{Họ Tên} & \textbf{Nhiệm Vụ} & \textbf{Chương Mục} \\
         \midrule
         \midrule
-        25410171 & Lê Thị Tú Anh & Thiết kế slide Làm bài tập chương  & Chương I, II, III, IV, V \\
-        25410179 & Giang Hải Chương & Làm bài tập chương  Phản biện & Chương III \\
-        25410183 & Nguyễn Đào Anh Đạt & Thuyết trình & Chương V \\
-        25410193 & Nguyễn Minh Duy & Thiết kế slide & Chương I, II, III, IV, V \\
-        25410204 & Trương Xuân Hậu & Phản biện & Chương V \\
-        25410213 & Phan Chí Hiếu & Làm bài tập chương Phản biện & Chương IV \\
-        25410220 & Vũ Huy Hoàng & Làm bài tập chương  Thuyết trình & Chương IV \\
-        25410239 & Phạm Tuấn Kiệt & Làm bài tập chương  Phản biện & Chương V \\
-        25410240 & Nguyễn Tạ Quí Lan & Thiết kế slide  Chỉnh file đồ án Phản biện & Chương I, II, III, IV, V Chương III \\
-        25410244 & Nguyễn Thành Lộc & Làm bài tập chương  Phản biện & Chương V \\
-        25410291 & Đinh Xuân Sâm & Chỉnh file đồ án Thuyết trình & Chương I, II \\
-        25410319 & Đặng Hữu Toàn & Làm bài tập chương  Phản biện & Chương IV \\
-        25410321 & Nguyễn Điền Triết & Làm bài tập chương  Thuyết trình & Chương III \\
-        25410325 & Nguyễn Văn Trung & Tìm thông tin và nội dung công ty Làm file đồ án Phản biện & Chương I, II, III, IV, V Chương I, II \\
-        25410338 & Lê Anh Vũ & Phản biện & Chương V \\
+        01 & 25410171 & Lê Thị Tú Anh & \textbullet \space Thiết kế slide \newline \textbullet \space Làm bài tập chương & Chương I, II, III, IV, V \\
+        \midrule
+        02 & 25410179 & Giang Hải Chương & \textbullet \space Làm bài tập chương \newline \textbullet \space Phản biện & Chương III \\
+        \midrule
+        03 & 25410183 & Nguyễn Đào Anh Đạt & \textbullet \space Thuyết trình & Chương V \\
+        \midrule
+        04 & 25410193 & Nguyễn Minh Duy & \textbullet \space Thiết kế slide & Chương I, II, III, IV, V \\
+        \midrule
+        05 & 25410204 & Trương Xuân Hậu & \textbullet \space Phản biện & Chương V \\
+        \midrule
+        06 & 25410213 & Phan Chí Hiếu & \textbullet \space Làm bài tập chương \newline \textbullet \space Phản biện & Chương IV \\
+        \midrule
+        07 & 25410220 & Vũ Huy Hoàng & \textbullet \space Làm bài tập chương \newline \textbullet \space Thuyết trình & Chương IV \\
+        \midrule
+        08 & 25410239 & Phạm Tuấn Kiệt & \textbullet \space Làm bài tập chương \newline \textbullet \space Phản biện & Chương V \\
+        \midrule
+        09 & 25410240 & Nguyễn Tạ Quí Lan & \textbullet \space Thiết kế slide \newline \textbullet \space Chỉnh file đồ án \newline \textbullet \space Phản biện & Chương I, II, III, IV, V \newline Chương III \\
+        \midrule
+        10 & 25410244 & Nguyễn Thành Lộc & \textbullet \space Làm bài tập chương \newline \textbullet \space Phản biện & Chương V \\
+        \midrule
+        11 & 25410291 & Đinh Xuân Sâm & \textbullet \space Chỉnh file đồ án \newline \textbullet \space Thuyết trình & Chương I, II \\
+        \midrule
+        12 & 25410319 & Đặng Hữu Toàn & \textbullet \space Làm bài tập chương \newline \textbullet \space Phản biện & Chương IV \\
+        \midrule
+        13 & 25410321 & Nguyễn Điền Triết & \textbullet \space Làm bài tập chương \newline \textbullet \space Thuyết trình & Chương III \\
+        \midrule
+        14 & 25410325 & Nguyễn Văn Trung & \textbullet \space Chuẩn bị nội dung \newline \textbullet \space Làm file đồ án \newline \textbullet \space Phản biện & Chương I, II, III, IV, V \newline Chương I, II \\
+        \midrule
+        15 & 25410338 & Lê Anh Vũ & \textbullet \space Phản biện & Chương V \\
+        \midrule
    \bottomrule
     \end{tabular}
     \caption{Nhóm 1 (Alpha) -- Bảng Phân Công}
