--- a/preamble/foreword.tex
+++ b/preamble/foreword.tex
@@ -1,6 +1,6 @@
-\begin{table}[htbp]
-    \centering
-    \begin{tabular}{p{0.05\textwidth} | p{0.1\textwidth} | p{0.22\textwidth} | p{0.3\textwidth}| p{0.25\textwidth}}
+\begin{table}[H]
+    % \centering
+    \begin{tabular}{p{0.05\textwidth} | p{0.1\textwidth} | p{0.22\textwidth} | p{0.22\textwidth}| p{0.25\textwidth}}
        \toprule
         \textbf{STT} & \textbf{MSSV} & \textbf{Họ Tên} & \textbf{Nhiệm Vụ} & \textbf{Chương Mục} \\
         \midrule
@@ -35,7 +35,7 @@
         \midrule
         15 & 25410338 & Lê Anh Vũ & \textbullet \space Phản biện & Chương V \\
         \midrule
-   \bottomrule
+    \bottomrule
     \end{tabular}
     \caption{Nhóm 1 (Alpha) -- Bảng Phân Công}
     \label{tab:alphagroup}
