Centering the table.

--- a/preamble/foreword.tex
+++ b/preamble/foreword.tex
@@ -1,5 +1,5 @@
 \begin{table}[H]
-    % \centering
+    \centering
     \begin{tabular}{p{0.05\textwidth} | p{0.1\textwidth} | p{0.22\textwidth} | p{0.22\textwidth}| p{0.25\textwidth}}
        \toprule
         \textbf{STT} & \textbf{MSSV} & \textbf{Họ Tên} & \textbf{Nhiệm Vụ} & \textbf{Chương Mục} \\
