--- a/presentations/IE101-baocaomonhoc.tex
+++ b/presentations/IE101-baocaomonhoc.tex
@@ -1,5 +1,5 @@
 \documentclass[14pt, aspectratio=169]{beamer}
-\usetheme{Copenhagen}
+\usetheme{Madrid}
 %\usecolortheme{seahorse}
 %\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
@@ -7,14 +7,17 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage{multicol}
+
 \author{Nhóm 1 (Alpha)}
 \title{Báo Cáo Môn Học \\(IE101 - Cơ Sở Hạ Tầng CNTT)}
 \setbeamercovered{transparent} 
 \setbeamertemplate{navigation symbols}{} 
-%\logo{} 
+\logo{\Huge $\alpha$} 
 %\institute{} 
-\date{TP. Hồ Chí Minh, Tháng 12, 2025} 
-\subject{Phân Tích Hạ Tầng} 
+\date{Tháng 12, 2025} 
+\subject{Phân Tích Hạ Tầng}
+
 \begin{document}
 
 \begin{frame}
@@ -22,11 +25,61 @@
 \end{frame}
 
 \begin{frame}
+\frametitle{Table of Contents}
+\begin{multicols}{2}
 \tableofcontents
+\end{multicols}
+\end{frame}
+
+\section{Lời Cảm Ơn}
+\begin{frame}
+\frametitle{Lời Cảm Ơn}
+\end{frame}
+
+\section{Giới Thiệu Nhóm 1}
+\begin{frame}{•}
+\frametitle{Giới Thiệu Nhóm 1}
+Các Thành Viên
 \end{frame}
 
 \begin{frame}{•}
+\frametitle{Giới Thiệu Nhóm 1}
+Bảng Phân Công Công Việc
+\end{frame}
+
 \section{Giới Thiệu Đề Tài}
+\begin{frame}{•}
+\frametitle{Giới Thiệu Đề Tài}
+\end{frame}
+
+\section{Thành Phần của Hạ Tầng}
+\begin{frame}{•}
+\frametitle{Thành Phần của Hạ Tầng}
+
+\end{frame}
+
+\section{Quy Trình Vận Hành}
+\begin{frame}{•}
+\frametitle{Quy Trình Vận Hành}
+
+\end{frame}
+
+\section{Đánh Giá}
+\begin{frame}{•}
+\frametitle{Đánh Giá}
+
+\end{frame}
+
+\section{Kết Luận}
+\begin{frame}{•}
+\frametitle{Kết Luận}
+
+\end{frame}
+
+\section{Hỏi Đáp}
+\begin{frame}{•}
+\frametitle{Hỏi Đáp}
+
 \end{frame}
 
 \end{document}
