--- a/presentations/IE101-baocaomonhoc.tex
+++ b/presentations/IE101-baocaomonhoc.tex
@@ -1,7 +1,7 @@
 \documentclass[14pt, aspectratio=169]{beamer}
 \usetheme{Madrid}
 %\usecolortheme{seahorse}
-%\usepackage[utf8]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amsmath}
 \usepackage{amsfonts}
@@ -11,74 +11,74 @@
 
 \author{Nhóm 1 (Alpha)}
 \title{Báo Cáo Môn Học \\(IE101 - Cơ Sở Hạ Tầng CNTT)}
-\setbeamercovered{transparent} 
-\setbeamertemplate{navigation symbols}{} 
-\logo{\Huge $\alpha$} 
-%\institute{} 
-\date{Tháng 12, 2025} 
+\setbeamercovered{transparent}
+\setbeamertemplate{navigation symbols}{}
+\logo{\Huge $\alpha$}
+%\institute{}
+\date{Tháng 12, 2025}
 \subject{Phân Tích Hạ Tầng}
 
 \begin{document}
 
 \begin{frame}
-\titlepage
+  \titlepage
 \end{frame}
 
 \begin{frame}
-\frametitle{Table of Contents}
-\begin{multicols}{2}
-\tableofcontents
-\end{multicols}
+  \frametitle{Table of Contents}
+  \begin{multicols}{2}
+    \tableofcontents
+  \end{multicols}
 \end{frame}
 
 \section{Lời Cảm Ơn}
 \begin{frame}
-\frametitle{Lời Cảm Ơn}
+  \frametitle{Lời Cảm Ơn}
 \end{frame}
 
 \section{Giới Thiệu Nhóm 1}
 \begin{frame}{•}
-\frametitle{Giới Thiệu Nhóm 1}
-Các Thành Viên
+  \frametitle{Giới Thiệu Nhóm 1}
+  Các Thành Viên
 \end{frame}
 
 \begin{frame}{•}
-\frametitle{Giới Thiệu Nhóm 1}
-Bảng Phân Công Công Việc
+  \frametitle{Giới Thiệu Nhóm 1}
+  Bảng Phân Công Công Việc
 \end{frame}
 
 \section{Giới Thiệu Đề Tài}
 \begin{frame}{•}
-\frametitle{Giới Thiệu Đề Tài}
+  \frametitle{Giới Thiệu Đề Tài}
 \end{frame}
 
 \section{Thành Phần của Hạ Tầng}
 \begin{frame}{•}
-\frametitle{Thành Phần của Hạ Tầng}
+  \frametitle{Thành Phần của Hạ Tầng}
 
 \end{frame}
 
 \section{Quy Trình Vận Hành}
 \begin{frame}{•}
-\frametitle{Quy Trình Vận Hành}
+  \frametitle{Quy Trình Vận Hành}
 
 \end{frame}
 
 \section{Đánh Giá}
 \begin{frame}{•}
-\frametitle{Đánh Giá}
+  \frametitle{Đánh Giá}
 
 \end{frame}
 
 \section{Kết Luận}
 \begin{frame}{•}
-\frametitle{Kết Luận}
+  \frametitle{Kết Luận}
 
 \end{frame}
 
 \section{Hỏi Đáp}
 \begin{frame}{•}
-\frametitle{Hỏi Đáp}
+  \frametitle{Hỏi Đáp}
 
 \end{frame}
 
